--- a/src/app/main-content/sc5-what-my-colleagues-say/single-opinion/single-opinion.component.scss
+++ b/src/app/main-content/sc5-what-my-colleagues-say/single-opinion/single-opinion.component.scss
@@ -4,17 +4,21 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 35%;
+  width: 500px;
   height: 250px;
-  min-width: 500px;
+  min-width: 300px;
   border: 2px solid $main-color2;
   background-color: $main-color3;
   padding: 6%;
   border-radius: 24px;
+  font-family: 'Karla';
+  font-size: 1.1rem;
+  line-height: 120%;
   
   > p {
     margin: 0 0 14px 0;
-  
+    max-height: 200px;
+    overflow-y: scroll;
   }
   .line-and-name {
     @include dFlex($g: 4%);
@@ -23,5 +27,21 @@
       flex-grow: 1;
       background-color: white;
     }
+  }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: $main-color3; 
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: #555; 
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: $main-color2; 
   }
 }
